--- a/src/scss/assets/_popup.scss
+++ b/src/scss/assets/_popup.scss
@@ -6,10 +6,14 @@
 .toast {
     border-radius: $border-radius;
     margin-bottom: 7px !important;
+    background-color: #ffffffba;
+    -webkit-backdrop-filter: saturate(120%) blur(8px);
+    backdrop-filter: saturate(120%) blur(8px);
 }
 
 .toast-header {
     border-bottom: none !important;
     border-radius: $border-radius;
+    background-color: #ffffff00;
 
 }
