--- a/src/scss/assets/_font.scss
+++ b/src/scss/assets/_font.scss
@@ -46,6 +46,7 @@ pre {
     background-color: $light-100;
     border-radius: $border-radius;
     overflow-x: scroll !important;
+    margin-bottom: 0px;
 
 }
 
