--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <html lang="ko">
     {{> head}}
   <body>
-    <dds-navbar nav-title="DDS">
+    <dds-navbar nav-title="DDS" nav-fixed="top">
         <dds-navbar-item item-link="/intro">소개</dds-navbar-item>
     </dds-navbar>
 
@@ -162,11 +162,20 @@
                             네비게이션 바는 사용자가 쉽게 페이지를 이동할 수 있도록 타이틀과 링크로 이루어져 있어요.
                             타이틀 바에는 서비스의 이름만 적고, 나머지는 적을 수 없어요.
                             링크에는 텍스트와 아이콘 중 하나를 선택하여 통일시켜야 해요.
+
+                            <b>nav-fixed를 사용하면 none, top(상단), bottom(하단)에 고정시킬 수 있어요.</b>
                         </p>
+
+                        <pre >
+
+                            <dds-navbar nav-title="DDS" nav-fixed="none">
+                                <dds-navbar-item item-link="/intro">소개</dds-navbar-item>
+                            </dds-navbar>
+                        </pre>
 
                         <pre class="mt-4">
                             <code data-language="html">
-&lt;dds-navbar nav-title=&quot;DDS&quot;&gt;
+&lt;dds-navbar nav-title=&quot;DDS&quot; nav-fixed=&quot;none&quot;&gt;
     &lt;dds-navbar-item item-link=&quot;/intro&quot;&gt;소개&lt;/dds-navbar-item&gt;
 &lt;/dds-navbar&gt;</code>
                         </pre>
@@ -177,9 +186,17 @@
                             이 뿐만 아니라 여러가지 HTML 콘텐츠들도 추가할 수 있죠.
                         </p>
 
+                        <pre>
+
+                            <dds-navbar nav-title="DDS Icon" nav-fixed="none">
+                                <dds-navbar-item item-link="/intro">소개</dds-navbar-item>
+                                <dds-navbar-item item-link="/icon"><i class="fab fa-android"></i></dds-navbar-item>
+                            </dds-navbar>
+                        </pre>
+
                         <pre class="mt-4">
                             <code data-language="html">
-&lt;dds-navbar nav-title=&quot;DDS Icon&quot;&gt;
+&lt;dds-navbar nav-title=&quot;DDS Icon&quot; nav-fixed=&quot;none&quot;&gt;
     &lt;dds-navbar-item item-link=&quot;/intro&quot;&gt;소개&lt;/dds-navbar-item&gt;
     &lt;dds-navbar-item item-link=&quot;/icon&quot;&gt;&lt;i class=&quot;fab fa-android&quot;&gt;&lt;/i&gt;&lt;/dds-navbar-item&gt;
 &lt;/dds-navbar&gt;</code>
@@ -237,7 +254,7 @@
 
 
                     <button class="btn btn-blue">Blue</button>
-                    <button class="btn btn-green">Success</button>
+                    <button class="btn btn-green">Green</button>
                     <button class="btn btn-red">Red</button>
                     <button class="btn btn-yellow">Yellow</button>
                     <button class="btn btn-light">Light</button>
@@ -245,7 +262,7 @@
 
 <pre class="mt-4"><code data-language="html">
 <button class="btn btn-blue">Blue</button>
-<button class="btn btn-green">Success</button>
+<button class="btn btn-green">Green</button>
 <button class="btn btn-red">Red</button>
 <button class="btn btn-yellow">Yellow</button>
 <button class="btn btn-light" >Light</button>
@@ -259,6 +276,19 @@
                         <p class="font-weight-sm mb-4">
                             하단 팝업 입니다. 부트스트랩 toast기능입니다.
                         </p>
+
+                        <pre>
+                            <div class="toast-container ">
+                            <dds-popup
+                                popup-title="테스트 팝업"
+                                popup-id="myToastEl2"
+                                popup-delay="5000"
+                                popup-autohide="false">안녕하세요. <b class="text-danger">반가워요.</b> 테스트 팝업이에요.
+                            </dds-popup>
+                            </div>
+
+
+                        </pre>
 
 
 <pre class="mt-4"><code data-language="html">&lt;div class=&quot;toast-container position-fixed bottom-0 end-0 p-3&quot;&gt;
@@ -341,10 +371,7 @@
             popup-title="테스트 팝업"
             popup-id="myToastEl"
             popup-delay="5000"
-            popup-autohide="false">
-
-            안녕하세요 <b class="text-danger">반가워요.</b> 테스트 팝업이에요.
-
+            popup-autohide="true">안녕하세요. 테스트 팝업이에요.
         </dds-popup>
 
     </div>
@@ -360,11 +387,7 @@
         var myOffcanvas = document.getElementById('offcanvasExample')
         var bsOffcanvas = new bootstrap.Offcanvas(myOffcanvas)
 
-        function hideSidebar() {
-            bsOffcanvas.toggle()
-            bsOffcanvas.toggle()
-            bsOffcanvas.hide()
-        }
+
     </script>
 
 
