fix: edited lead font style
+ 버전업 테스트

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -105,6 +105,14 @@
                             따라서 직관적인 메시지를 심플하게 보여주는게 디자인 시스템의 핵심이죠.
                         </p>
 
+                        <pre>
+                            <dds-header 
+                                header-title="디자인, 경계를 넘어"
+                                header-sub-title="데벤트의 디자인 시스템은 디자인의 경계를 뛰어넘는 우아함을 선사합니다. 그야말로 경이로움에 가까운 전율을 느낄 수 있죠.">
+                                
+                            </dds-header>
+                        </pre>
+
                         <pre class="mt-4">
                             <code data-language="html">
 &lt;dds-header 
@@ -119,6 +127,17 @@
                             헤더에 버튼이 빠질 수 없죠.
                             버튼은 밋밋하지 않은 해더를 만들어주고 유저 사용성까지 챙겨주는 고마운 친구랍니다.
                         </p>
+
+                        <pre>
+<dds-header 
+    header-title="디자인, 경계를 넘어"
+    header-sub-title="데벤트의 디자인 시스템은 디자인의 경계를 뛰어넘는 우아함을 선사합니다. 그야말로 경이로움에 가까운 전율을 느낄 수 있죠.">
+    <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+        <button>yes!</button>
+    </div>
+</dds-header>
+                
+                        </pre>
 
                         <pre class="mt-4">
                             <code data-language="html">
@@ -143,6 +162,17 @@
                             푸터를 꾸미는건 사이트의 정보를 확고하게 하는 것.
                             밋밋한 푸터가 되지 않도록 신경을 좀 써봤어요.
                         </p>
+
+                        <pre>
+                            
+<dds-footer
+    project-title="DeVent Design System"
+    sub-title="데벤트"
+    company-name="사업자등록번호 : 429-52-00535 | 대표: 허형준"
+    project-email="문의: info@devent.kr">
+</dds-footer>
+                
+                        </pre>
 
                         <pre class="mt-4">
                             <code data-language="html">
