feat: changed input-group design
+ 인풋그룹 디자인 변경

--- a/src/scss/assets/_form.scss
+++ b/src/scss/assets/_form.scss
@@ -13,3 +13,10 @@
         background-color: $light-100;
     }
 }
+
+.input-group-text {
+    border: none !important;
+    border-radius: $border-radius;
+    background-color: $light-100;
+
+}
