--- a/views/partials/pages/components/input.hbs
+++ b/views/partials/pages/components/input.hbs
@@ -1,12 +1,60 @@
 
 <h2 class="h4 fw-bolder font-weight-md mt-2">텍스트입력 </h2>
 
+<p class="font-weight-sm mb-4">
+    긴 글을 입력받거나 엔터를 입력해야하는 일이 생길 때 쓰는 입력창이에요.
+</p>
+
+
 <div class="mb-3">
     <textarea class="form-control" rows="3"></textarea>
 </div>
 
+<pre class="mt-4"><code data-language="html"><div class="mb-3">
+    <textarea class="form-control" rows="3"></textarea>
+</div>
+</code></pre>
+
 <h2 class="h4 fw-bolder font-weight-md mt-2">입력 </h2>
 
+<p class="font-weight-sm mb-4">
+    모든 입력을 처-리 할 수 있어요. 그야말로 처리의 경지에 다다랐죠.
+    데벤트 디자인 시스템과 부트스트랩이 만나 더욱 완벽해진 인풋을 만나보세요.
+</p>
+
 <div class="mb-3">
-    <input type="text" class="form-control"  placeholder="name@example.com">
+    <input type="text" class="form-control" placeholder="name@example.com">
 </div>
+
+<pre class="mt-4"><code data-language="html"><div class="mb-3">
+    <input type="text" class="form-control" placeholder="name@example.com">
+</div>
+</code></pre>
+
+<br>
+
+<p class="font-weight-sm mb-4">
+    이번엔 아이콘도 함께해요.
+    여기서 더 놀라운 사실은 버튼도 넣을 수 있다는거에요. (놀람)
+</p>
+
+<div class="input-group mb-3">
+    <span class="input-group-text" id="basic-addon1">@</span>
+    <input type="text" class="form-control" placeholder="유저 아이디">
+</div>
+
+<div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="바로가기">
+    <button class="btn btn-green"> <i class="fas fa-arrow-right"></i> </button>
+</div>
+
+<pre class="mt-4"><code data-language="html"><div class="input-group mb-3">
+    <span class="input-group-text" id="basic-addon1">@</span>
+    <input type="text" class="form-control" placeholder="유저 아이디">
+</div>
+
+<div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="바로가기">
+    <button class="btn btn-green"> <i class="fas fa-arrow-right"></i> </button>
+</div>
+</code></pre>
