feat: created about.hbs
+ 설명 페이지 생성

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     {{> head}}
   <body>
     <dds-navbar nav-title="DDS" nav-fixed="top">
-        <dds-navbar-item item-link="/intro">소개</dds-navbar-item>
+        <dds-navbar-item item-link="/about">소개</dds-navbar-item>
     </dds-navbar>
 
 
