fix: edited header sub title
+ 헤더 설명(서브 타이틀) 폰트 및 margin 수정

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
 
     <dds-header 
         header-title="디자인, 경계를 넘어"
-        header-sub-title="데벤트의 디자인 시스템은 디자인의 경계를 뛰어넘는 우아함을 선사합니다. 그야말로 경이로움에 가까운 전율을 느낄 수 있죠.">
+        header-sub-title="경계를 넘는 디자인, 데벤트 디자인 시스템이 만들어 나갑니다.">
         
         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
             <button class="btn btn-blue font-weight-sm px-4 py-3 mt-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
