--- a/src/scss/assets/foundation/_variable.scss
+++ b/src/scss/assets/foundation/_variable.scss
@@ -1,4 +1,6 @@
 $border-radius: 10px !default;
+$border-line: 0.3px solid rgba(0, 0, 0, 0.059);
+$border-shadow: 0 0.5rem 1rem rgb(0 0 0 / 10%);
 
 $modal-shadow: 2px 0px 40px 5px #272d331e !default;
 
