--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,6 +35,7 @@
 
                         <dds-navtab-item item-id="header" is-selected="false"></dds-navtab-item>
                         <dds-navtab-item item-id="color" is-selected="false"></dds-navtab-item>
+                        <dds-navtab-item item-id="dropdown" is-selected="false"></dds-navtab-item>
 
                         <dds-navtab-item item-id="footer" is-selected="false"></dds-navtab-item>
                         <dds-navtab-item item-id="navbar" is-selected="false"></dds-navtab-item>
@@ -56,6 +57,10 @@
 
                     <div class="tab-pane fade" id="v-pills-color" role="tabpanel" aria-labelledby="v-pills-color-tab">
 {{> pages/components/color}}
+                    </div>
+
+                    <div class="tab-pane fade" id="v-pills-dropdown" role="tabpanel" aria-labelledby="v-pills-dropdown-tab">
+{{> pages/components/dropdown}}
                     </div>
 
                     <div class="tab-pane fade" id="v-pills-header" role="tabpanel" aria-labelledby="v-pills-header-tab">
