--- a/views/partials/pages/guides/typo.hbs
+++ b/views/partials/pages/guides/typo.hbs
@@ -1,7 +1,7 @@
-<h2 class="h4 font-title fw-bolder font-weight-md mt-2">사이드 바 </h2>
+<h2 class="h4 font-title fw-bolder font-weight-md mt-2">UX Writing </h2>
 <p class="font-weight-sm mb-4">
     사이드바는 부트스트랩5 에서의 offcanvas 기능이에요.
-    메뉴나 콘텐츠, 핸들링이 필요하다면 사이드바를 이용하면 돼요.
+    메뉴나 콘텐츠, 핸들링이 필요하다면 사이드바를 이용하면 됩니다.
 </p>
 
 <pre class="mt-4">
