--- a/src/scss/assets/_navbar.scss
+++ b/src/scss/assets/_navbar.scss
@@ -2,6 +2,9 @@
 @import 'foundation/variable';
 
 
+.navbar-item {
+    padding-left: 0.5rem;
+}
 
 .navbar-blur {
     background-color: #ffffffd5;
