docs: setup guide page
+ 가이드라인 페이지 생성

--- a/src/scss/assets/foundation/_color.scss
+++ b/src/scss/assets/foundation/_color.scss
@@ -11,9 +11,9 @@ $red-100: #fddbdb !default;
 $red-200: #f2cfcf !default;
 $red-300: #be2b0a !default;
 
-$yellow-100: #f7f5df !default;
-$yellow-200: #edf0c4 !default;
-$yellow-300: #b8aa10 !default;
+$yellow-100: #fff3cd !default;
+$yellow-200: #ffe69ccc !default;
+$yellow-300: #cc9a06 !default;
 
 $light-100: #f2f4f5 !default;
 $light-200: #dbdee0 !default;
