--- a/views/partials/pages/guides/typo.hbs
+++ b/views/partials/pages/guides/typo.hbs
@@ -1,20 +1,13 @@
 <h2 class="h4 font-title fw-bolder font-weight-md mt-2">UX Writing </h2>
-<p class="font-weight-sm mb-4">
-    사이드바는 부트스트랩5 에서의 offcanvas 기능이에요.
-    메뉴나 콘텐츠, 핸들링이 필요하다면 사이드바를 이용하면 됩니다.
-</p>
 
-<pre class="mt-4">
-    <code data-language="html">
-&lt;button class=&quot;btn btn-blue font-weight-sm px-4 py-3 mt-2&quot; type=&quot;button&quot; data-bs-toggle=&quot;offcanvas&quot; data-bs-target=&quot;#offcanvasExample&quot; aria-controls=&quot;offcanvasExample&quot;&gt;
-    사이드바 열기
-&lt;/button&gt;
-
-&lt;dds-sidebar 
-    sidebar-title=&quot;사이드바&quot;
-    sidebar-id=&quot;offcanvasExample&quot;&gt;
+<b class="h6 fw-bolder font-weight-md ">-해요. 와 같은 대화체를 권장해요. 대화에 부연설명이 필요하다면 -죠. 를 붙여 주세요. </b>
+<br><br>
 
 
-&lt;/dds-sidebar&gt;
-</code>
-</pre>
+<b class="h6 fw-bolder font-weight-md mb-1">사용자의 단순 의사를 물어보는 모달창은 다음과 같이 구성해요. </b>
+<img src="/image/DDS1.png" alt="" class="img-fluid">
+<br><br>
+
+
+<b class="h6 fw-bolder font-weight-md mt-2">사용자의 입력을 받는 경우 다음과 같이 구성해요.</b>
+<img src="/image/DDS2.png" alt="" class="img-fluid">
