--- a/views/static/about.hbs
+++ b/views/static/about.hbs
@@ -4,6 +4,8 @@
   <body>
     <dds-navbar nav-title="DDS" nav-fixed="top">
         <dds-navbar-item item-link="/about">소개</dds-navbar-item>
+        <dds-navbar-item item-link="/guide">가이드라인</dds-navbar-item>
+
     </dds-navbar>
 
 
